fs: merge sdcardfs from SM-G900F_EUR_LL_Opensource.zip
Signed-off-by: arter97 <qkrwngud825@gmail.com>

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -40,6 +40,8 @@ source "fs/ocfs2/Kconfig"
 source "fs/btrfs/Kconfig"
 source "fs/nilfs2/Kconfig"
 
+source "fs/sdcardfs/Kconfig"
+
 endif # BLOCK
 
 # Posix ACL utility routines
